fix: comment upload route
