# examples-files/openapi3.yaml
@@ -97,65 +97,65 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
 
-    post:
-      summary: Upload file content to a specified path
-      parameters:
-        - in: query
-          name: path
-          schema:
-            type: string
-          description: The path on the server where the file will be stored.
-          allowReserved: true
-          required: true
+    # post:
+    #   summary: Upload file content to a specified path
+    #   parameters:
+    #     - in: query
+    #       name: path
+    #       schema:
+    #         type: string
+    #       description: The path on the server where the file will be stored.
+    #       allowReserved: true
+    #       required: true
 
-        - in: query
-          name: overwrite
-          schema:
-            type: boolean
-          description: If file already exist, should overwrite the file or not.
-          required: false
+    #     - in: query
+    #       name: overwrite
+    #       schema:
+    #         type: boolean
+    #       description: If file already exist, should overwrite the file or not.
+    #       required: false
 
-        - in: query
-          name: buffersize
-          schema:
-            type: number
-          description: Max buffer size for each data chunk in the stream, in bytes.
-          required: false
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                file:
-                  type: string
-                  format: binary
-              required:
-                - file
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
-      responses:
-        201:
-          description: CREATED
-          content:
-            'application/json':
-              schema:
-                $ref: '#/components/schemas/res'
-        404:
-          description: BAD REQUEST
-          content:
-            'application/json':
-              schema:
-                $ref: '#/components/schemas/res'
-        500:
-          description: INTERNAL SERVER ERROR
-          content:
-            'application/json':
-              schema:
-                $ref: '#/components/schemas/error'
+    #     - in: query
+    #       name: buffersize
+    #       schema:
+    #         type: number
+    #       description: Max buffer size for each data chunk in the stream, in bytes.
+    #       required: false
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       multipart/form-data:
+    #         schema:
+    #           type: object
+    #           properties:
+    #             file:
+    #               type: string
+    #               format: binary
+    #           required:
+    #             - file
+    #       application/octet-stream:
+    #         schema:
+    #           type: string
+    #           format: binary
+    #   responses:
+    #     201:
+    #       description: CREATED
+    #       content:
+    #         'application/json':
+    #           schema:
+    #             $ref: '#/components/schemas/res'
+    #     404:
+    #       description: BAD REQUEST
+    #       content:
+    #         'application/json':
+    #           schema:
+    #             $ref: '#/components/schemas/res'
+    #     500:
+    #       description: INTERNAL SERVER ERROR
+    #       content:
+    #         'application/json':
+    #           schema:
+    #             $ref: '#/components/schemas/error'
 
   /explorer/filebyid:
     get:
