# src/storageExplorer/routes/storageExplorer.router.ts
@@ -7,7 +7,11 @@ const storageExplorerRouter = (controller: StorageExplorerController): Router =>
   router.get('/directory', controller.getDirectory);
   router.get('/directorybyid', controller.getdirectoryById);
   router.get('/file', controller.getStreamFile);
-  router.post('/file', controller.writeStreamFile);
+  /******************************************************************** */
+  // Currently, we don't have any upload scenarios.
+  // This will be used when it becomes relevant in the future (probably should be revised).
+  /******************************************************************** */
+  // router.post('/file', controller.writeStreamFile);
   router.get('/filebyid', controller.getFileById);
   router.get('/decryptid', controller.decryptId);
 
